samples/_failures_safe/1761708350_d3ea50_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d16f14c6.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_d16f14c6.c:154:21: error: expected ‘;’ at end of input
  154 |                 dist
      |                     ^
      |                     ;
./samples/SAFE/__tmp_d16f14c6.c:154:17: error: expected declaration or statement at end of input
  154 |                 dist
      |                 ^~~~
./samples/SAFE/__tmp_d16f14c6.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d16f14c6.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d16f14c6.c:154:17: error: expected declaration or statement at end of input
